force-app/main/default/objects/KimbleOne__CreditAdjustment__c/KimbleOne__CreditAdjustment__c.object-meta.xml
<CustomObject>
    <label>Credit Adjustment</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Credit Adjustment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>