force-app/main/default/objects/KimbleOne__CreditAdjustment__c/fields/KimbleOne__AdjustmentValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AdjustmentValue__c</fullName>
    <label>Adjustment Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>