force-app/main/default/objects/KimbleOne__CreditAdjustment__c/fields/KimbleOne__DeliveryElement__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryElement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Element</label>
    <referenceTo>KimbleOne__DeliveryElement__c</referenceTo>
    <relationshipLabel>Credit Adjustments</relationshipLabel>
    <relationshipName>CreditAdjustments</relationshipName>
    <type>Lookup</type>
</CustomField>